# live-rail

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
nb/: LoadSandbox.ipynb  PdfExplorer.ipynb  Pdf_Cloud.ipynb  Sandbox.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  Untitled4.ipynb  UseCatEstimatorPdfWrapper.ipynb  catalogs.yaml  default_catalogs.yaml  des_sn_catalogs.yaml  pz_challenge_taskset_1_cardinal_pz_model_10yr.pkl  sandbox_catalogs.yaml  sine_wave.ipynb
scripts/: setup_pzdc.py
src/live_rail/: _version.py  app.py  rail_svc_utils.py
src/live_rail/apps/: __init__.py  cat_data_app.py  cat_multi_data_app.py  cat_pdf_app.py  cat_pdf_cloud_app.py  live_estimate_app.py  live_estimate_single.py  multi_cat_app.py  test_app.py
src/live_rail/backend/: __init__.py  provider.py
src/live_rail/cli/: commands.py  options.py
src/live_rail/dashboard/: __init__.py  app.py  layout.py  nav.py
src/live_rail/dashboard/pages/: home.py  settings.py
src/live_rail/dashboard/pages/crud/: _base.py  _components.py  algorithm.py  band.py  catalog_band_assoc.py  catalog_tag.py  dataset.py  dataset_assoc.py  estimates.py  estimator.py  filter_ab.py  model.py  sed.py
src/live_rail/dashboard/pages/estimation/: estimate_dataset.py  estimate_ensemble.py  estimate_pdf.py
src/live_rail/dashboard/pages/visualizers/: multi_catalog.py  single_catalog.py
src/live_rail/setup/: __init__.py  _base.py  des_sn.py  pzdc.py
src/live_rail/wrappers/: __init__.py  cat_estimator_pdf_wrapper.py  object_wrapper.py  rail_svc_wrapper.py
tests/: conftest.py  test_app.py  test_backend_provider.py  test_callbacks.py  test_cli.py  test_crud_base.py  test_crud_components.py  test_integration.py  test_object_wrapper.py  test_rail_svc_utils.py  test_rail_svc_wrapper.py
