[project]
name = "live-rail"
description = "Unified dashboard for RAIL photometric redshift estimation"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [
    { name = "The LSST DESC PZ WG", email = "echarles@slac.stanford.edu" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Natural Language :: English",
    "Operating System :: POSIX",
]

dynamic = ["version"]
dependencies = [
    "pz-rail-base>=2.0",
    "plotly",
    "click",
    "dash[ag-grid]",
    "pz-rail-svc[all]",
    "qp-prob[full]",
]

[project.optional-dependencies]

dev = [
    "coverage",
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "pylint",
    "pre-commit",
]

docs = [
    "nbsphinx",
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinx_rtd_theme",
    "sphinx-autoapi",
    "sphinx-tabs",
    "sphinx-click",
]

[project.scripts]
live-rail = "live_rail.cli.commands:cli"

[build-system]
requires = ["setuptools>=62", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/live_rail/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=src/live_rail",
    "--cov-report=html",
    "-m", "not integration",
]
markers = [
    "integration: tests that require the real database and data files",
]

[tool.ruff]
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
disallow_untyped_defs = false
disallow_incomplete_defs = false
ignore_missing_imports = true
local_partial_types = true
no_implicit_reexport = true
show_error_codes = true
strict_equality = true

[[tool.mypy.overrides]]
module = "live_rail.dashboard.pages.crud._components"
warn_unreachable = false

[[tool.mypy.overrides]]
module = "live_rail.wrappers.rail_svc_wrapper"
disable_error_code = ["attr-defined"]

[tool.coverage.run]
omit = ["*/_version.py"]

[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
    "__repr__",
    "TYPE_CHECKING",
]

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
disable = "C0415, E1101, W0231, W0233, W0237, W0612, W0613, W0718, W1203, W1510, C0115, C0116, C0114, C0103, C0302, R0902, R0903, R0912, R0913, R0917, R0914, R0915, R0801, R0904, R1705, R1735"
